--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="list-group">
+<div class="list-group custom-container-bg">
     <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
       INICIO
     </button>
@@ -7,3 +7,5 @@
     <button type="button" class="list-group-item list-group-item-action">SEGUIMIENTO</button>
     <button type="button" class="list-group-item list-group-item-action" disabled>DESHABILITADO</button>
   </div>
+  
+  
