--- a/src/app/Components/principal/principal.component.html
+++ b/src/app/Components/principal/principal.component.html
@@ -2,7 +2,7 @@
 <br>
 <div class="container-fluid text-center">
     <div class="row">
-      <div class="col-2 border p-3" style="margin-left: 15px;"><app-sidebar></app-sidebar></div>
-      <div class="col-9 border p-3">col-10 (85%)</div>
+      <div class="col-2 p-3 custom-container-bg"style="margin-left: 15px;"><app-sidebar></app-sidebar></div>
+      <div class="col-9 p-3 customm2-container-bg" >col-10 (85%)</div>
     </div>
   </div>
