--- a/src/app/Components/sidebar/sidebar.component.css
+++ b/src/app/Components/sidebar/sidebar.component.css
@@ -1,3 +1,17 @@
 .custom-container-bg {
-    background-color: red;
+    background-color: #f1ebeb;
   }
+
+  .mr-img {
+    margin-right: 10px; /* Ajusta el valor del margen según lo que necesites */
+    display: flex;
+    align-items: center;
+  }
+
+  .image-above-divider img {
+    width: 100px; /* Ajusta el ancho deseado de la imagen */
+    height: auto; /* Mantener la proporción de aspecto */
+    display: block;
+    margin: 0 auto 10px; /* Ajusta el margen inferior para separar la imagen de la barra de división */
+  }
+  
