--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,11 +1,29 @@
-<div class="list-group custom-container-bg">
-    <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
-      INICIO
-    </button>
-    <button type="button" class="list-group-item list-group-item-action">AGENDA</button>
-    <button type="button" class="list-group-item list-group-item-action">CASOS</button>
-    <button type="button" class="list-group-item list-group-item-action">SEGUIMIENTO</button>
-    <button type="button" class="list-group-item list-group-item-action" disabled>DESHABILITADO</button>
+<div class="custom-container-bg">
+    <div class="image-above-divider">
+      <img src="../../../assets/img/logocha.png" alt="Imagen Superior">
+    </div>
+    
+    <hr class="divider">
+ 
+
+    <div class="list-group custom-container-bg">
+        <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+            <img src="../../../assets/img/boton-de-inicio.png" alt="Imagen de Inicio" class="mr-img" > INICIO
+        </button>
+        <button type="button" class="list-group-item list-group-item-action">
+            <img src="../../../assets/img/agenda.png" alt="agenda" class="mr-img" >
+            AGENDA</button>
+        <button type="button" class="list-group-item list-group-item-action">
+            <img src="../../../assets/img/sospechar.png" alt="Casos" class="mr-img" >
+            CASOS</button>
+        <button type="button" class="list-group-item list-group-item-action">
+            
+            <img src="../../../assets/img/intercambiar.png" alt="Seguimiento" class="mr-img" >
+            SEGUIMIENTO</button>
+        <button type="button" class="list-group-item list-group-item-action" disabled>DESHABILITADO</button>
+      </div>
   </div>
+
+
   
   
