--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -2,28 +2,24 @@
     <div class="image-above-divider">
       <img src="../../../assets/img/logocha.png" alt="Imagen Superior">
     </div>
-    
+  
     <hr class="divider">
- 
-
+  
     <div class="list-group custom-container-bg">
-        <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
-            <img src="../../../assets/img/boton-de-inicio.png" alt="Imagen de Inicio" class="mr-img" > INICIO
-        </button>
-        <button type="button" class="list-group-item list-group-item-action">
-            <img src="../../../assets/img/agenda.png" alt="agenda" class="mr-img" >
-            AGENDA</button>
-        <button type="button" class="list-group-item list-group-item-action">
-            <img src="../../../assets/img/sospechar.png" alt="Casos" class="mr-img" >
-            CASOS</button>
-        <button type="button" class="list-group-item list-group-item-action">
-            
-            <img src="../../../assets/img/intercambiar.png" alt="Seguimiento" class="mr-img" >
-            SEGUIMIENTO</button>
-        <button type="button" class="list-group-item list-group-item-action" disabled>DESHABILITADO</button>
-      </div>
+      <button type="button" class="list-group-item list-group-item-action active" aria-current="true" routerLink="/principal">
+        <img src="../../../assets/img/boton-de-inicio.png" alt="Imagen de Inicio" class="mr-img"> INICIO
+      </button>
+      <button type="button" class="list-group-item list-group-item-action" routerLink="/agenda">
+        <img src="../../../assets/img/agenda.png" alt="agenda" class="mr-img"> AGENDA
+      </button>
+      <button type="button" class="list-group-item list-group-item-action" routerLink="/casos">
+        <img src="../../../assets/img/sospechar.png" alt="Casos" class="mr-img"> CASOS
+      </button>
+      <button type="button" class="list-group-item list-group-item-action" routerLink="/seguimiento">
+        <img src="../../../assets/img/intercambiar.png" alt="Seguimiento" class="mr-img"> SEGUIMIENTO
+      </button>
+      <button type="button" class="list-group-item list-group-item-action" disabled>CERRAR SESION</button>
+    </div>
   </div>
-
-
   
   
