--- a/src/app/Components/principal/principal.component.html
+++ b/src/app/Components/principal/principal.component.html
@@ -1,8 +1,20 @@
 <br>
 <br>
+<!--
 <div class="container-fluid text-center">
     <div class="row">
       <div class="col-2 p-3 custom-container-bg"style="margin-left: 15px;"><app-sidebar></app-sidebar></div>
-      <div class="col-9 p-3 customm2-container-bg" >col-10 (85%)</div>
+      <div class="col-9 p-3 customm2-container-bg"></div>
     </div>
-  </div>
+  </div>-->
+  <div class="container-fluid text-center">
+    <div class="row">
+      <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
+        <app-sidebar></app-sidebar>
+      </div>
+      <div class="col-9 p-3 customm2-container-bg">Principal</div>
+        
+      </div>
+    </div>
+
+  
