--- a/src/app/Components/principal/agenda/crearcontacto/crearcontacto.component.html
+++ b/src/app/Components/principal/agenda/crearcontacto/crearcontacto.component.html
@@ -1,1 +1,88 @@
-<p>crearcontacto works!</p>
+<br>
+<br>
+<div class="container-fluid text-center">
+    <div class="row">
+      <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
+        <app-sidebar></app-sidebar>
+      </div>
+      <div class="col-9 p-3 customm2-container-bg"><app-navbaragenda></app-navbaragenda>
+    <p></p>
+    <div class="row g-2">
+        <div class="col-md">
+          <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInputGrid" placeholder="Nombre" value="">
+            <label for="floatingInputGrid">Nombre</label>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="form-floating">
+            <select class="form-select" id="floatingSelectGrid">
+              <option selected>Tipo</option>
+              <option value="Persona Natural">Persona Natural</option>
+              <option value="Persona Juridica">Persona Juridica</option>
+              <option value="Estado">Estado</option>
+            </select>
+            <label for="floatingSelectGrid">Seleccione:</label>
+          </div>
+        </div>
+      </div>
+<br>
+      <div class="row g-2">
+        <div class="col-md">
+          <div class="form-floating">
+            <input type="email" class="form-control" id="floatingInputGrid" placeholder="nombre@institucion.org" value="">
+            <label for="floatingInputGrid">Email</label>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInputGrid" placeholder="Telefono" value="">
+            <label for="floatingInputGrid">Telefono</label>
+        </div>
+      </div>
+
+      <br>
+      <div class="row g-2">
+        <div class="col-md">
+          <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInputGrid" placeholder="CI" value="">
+            <label for="floatingInputGrid">Carnet de Identidad</label>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="form-floating">
+            <select class="form-select" id="floatingSelectGrid">
+                <option selected>Extension</option>
+                <option value="LP">LP</option>
+                <option value="CBBA">CBBA</option>
+                <option value="SC">SC</option>
+                <option value="PTSI">PTSI</option>
+                <option value="OR">OR</option>
+                <option value="SCRE">SCRE</option>
+                <option value="TJA">TJA</option>
+                <option value="PNDO">PNDO</option>
+                <option value="BNI">BNI</option>
+                <option value="OTRO">OTRO</option>
+              </select>
+              <label for="floatingSelectGrid">Seleccione:</label>
+        </div>
+      </div>
+
+      <br>
+      <div class="row g-2">
+        <div class="col-md">
+          <div class="form-floating">
+            <textarea class="form-control" placeholder="Direccion" id="floatingTextarea2" style="height: 100px"></textarea>
+  <label for="floatingTextarea2">Direccion</label>
+          </div>
+        </div>
+
+        
+</div>
+        
+      </div>
+      
+    </div>
+    <br>
+    <br>
+    <button type="button" class="btn btn-primary btn-lg">REGISTRAR</button>
