update personal UI

--- a/src/app/Components/principal/agenda/crearcontacto/crearcontacto.component.html
+++ b/src/app/Components/principal/agenda/crearcontacto/crearcontacto.component.html
@@ -67,6 +67,21 @@
               <label for="floatingSelectGrid">Seleccione:</label>
         </div>
       </div>
+<br>
+<div class="row g-2">
+    <div class="col-md">
+      <div class="form-floating">
+        <input type="date" class="form-control" id="floatingInputGrid" placeholder="nombre@institucion.org" value="">
+        <label for="floatingInputGrid">Fecha de Nacimiento</label>
+      </div>
+    </div>
+    <div class="col-md">
+      <div class="form-floating">
+        <input type="text" class="form-control" id="floatingInputGrid" placeholder="fnacimiento" value="">
+        <label for="floatingInputGrid">Estado Civil</label>
+    </div>
+  </div>
+
 
       <br>
       <div class="row g-2">
@@ -84,5 +99,7 @@
       
     </div>
     <br>
+    <br>
+    </div>
     <br>
     <button type="button" class="btn btn-primary btn-lg">REGISTRAR</button>
