--- a/src/app/Components/principal/personal/personal.component.html
+++ b/src/app/Components/principal/personal/personal.component.html
@@ -5,7 +5,7 @@
       <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
         <app-sidebar></app-sidebar>
       </div>
-      <div class="col-9 p-3 customm2-container-bg"><app-navbarcasos></app-navbarcasos></div>
+      <div class="col-9 p-3 customm2-container-bg"><app-navbarpersonal></app-navbarpersonal></div>
         
       </div>
     </div>
