--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -18,6 +18,9 @@
       <button type="button" class="list-group-item list-group-item-action" routerLink="/seguimiento">
         <img src="../../../assets/img/intercambiar.png" alt="Seguimiento" class="mr-img"> SEGUIMIENTO
       </button>
+      <button type="button" class="list-group-item list-group-item-action" routerLink="/personal">
+        <img src="../../../assets/img/usuario.png" alt="Personal" class="mr-img"> PERSONAL
+      </button>
       <button type="button" class="list-group-item list-group-item-action" disabled>CERRAR SESION</button>
     </div>
   </div>
