--- a/src/app/Components/principal/agenda/crearcontacto/crearcontacto.component.html
+++ b/src/app/Components/principal/agenda/crearcontacto/crearcontacto.component.html
@@ -21,6 +21,8 @@
               <option value="Persona Natural">Persona Natural</option>
               <option value="Persona Juridica">Persona Juridica</option>
               <option value="Estado">Estado</option>
+              <option value="Cliente Persona Natural">Cliente Persona Natural</option>
+              <option value="Cliente Persona Juridica">Cliente Persona Juridica</option>
             </select>
             <label for="floatingSelectGrid">Seleccione:</label>
           </div>
