--- a/src/app/Components/principal/personal/crearpersonal/crearpersonal.component.html
+++ b/src/app/Components/principal/personal/crearpersonal/crearpersonal.component.html
@@ -102,6 +102,27 @@
           <label for="floatingInputGrid">Nombre del Titulo</label>
       </div>
     </div>
+    <div class="col-md">
+        <div class="form-floating">
+            <select class="form-select" id="floatingSelectGrid">
+                <option selected>Especialidad</option>
+                <option value="Administrativo">Administrativo</option>
+                <option value="Civil">Civil</option>
+                <option value="Constitucional">Constitucional</option>
+                <option value="Penal">Penal</option>
+                <option value="Procesal">Procesal</option>
+                <option value="Tributario">Tributario</option>
+                <option value="Mercantil">Mercantil</option>
+                <option value="Laboral">Laboral</option>
+                <option value="Internacional">Internacional</option>
+                <option value="Ambiental">Ambiental</option>
+                <option value="Familiar">Familiar</option>
+                <option value="Comercial">Comercial</option>
+                <option value="OTRO">OTRO</option>
+              </select>
+              <label for="floatingSelectGrid">Seleccione:</label>
+      </div>
+    </div>
           <br>
           <div class="row g-2">
             <div class="col-md">
