--- a/src/app/Components/principal/personal/listadopersonal/listadopersonal.component.html
+++ b/src/app/Components/principal/personal/listadopersonal/listadopersonal.component.html
@@ -1,1 +1,48 @@
-<p>listadopersonal works!</p>
+<br>
+<br>
+<div class="container-fluid text-center">
+    <div class="row">
+      <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
+        <app-sidebar></app-sidebar>
+      </div>
+      <div class="col-9 p-3 customm2-container-bg"><app-navbarpersonal></app-navbarpersonal>
+    <p></p>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Telefono</th>
+            <th scope="col">Tipo</th>
+            <th scope="col">Direccion</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          <tr>
+            <th scope="row">1</th>
+            <td>Carlos</td>
+            <td>Azcarraga</td>
+            <td>Abogado</td>
+            <td>Mariano Mendez 2135</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+            <td>@mdo</td>
+          </tr>
+        </tbody>
+      </table>
+
+
+</div>
+        
+      </div>
+    </div>
