--- a/src/app/Components/principal/principal.component.html
+++ b/src/app/Components/principal/principal.component.html
@@ -12,7 +12,48 @@
       <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
         <app-sidebar></app-sidebar>
       </div>
-      <div class="col-9 p-3 customm2-container-bg">Principal</div>
+      <div class="col-9 p-3 customm2-container-bg">
+
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="../../../assets/img/libro.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Manual de Usuario</h5>
+                <p class="card-text">Seccion de guia para el usuario.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../../../assets/img/archivo.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Repositorio</h5>
+                <p class="card-text">Repositorios de leyes, normativas vigentes</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../../../assets/img/analitica.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Sitios Oficiales</h5>
+                <p class="card-text">Sitios oficiales de leyes de Bolivia</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../../../assets/img/logocha.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Acerca de</h5>
+                <p class="card-text">Acerca del software y los desarrolladores del mismo</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
         
       </div>
     </div>
