--- a/src/app/Components/principal/principal.component.html
+++ b/src/app/Components/principal/principal.component.html
@@ -12,8 +12,12 @@
       <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
         <app-sidebar></app-sidebar>
       </div>
-      <div class="col-9 p-3 customm2-container-bg">
 
+      <div class="col-9 p-3 customm2-container-bg">
+        <!--<app-banner></app-banner>-->
+        <br>
+        <p></p>
+        <p></p>
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
             <div class="card">
