--- a/src/app/Components/principal/agenda/agenda.component.html
+++ b/src/app/Components/principal/agenda/agenda.component.html
@@ -5,7 +5,10 @@
       <div class="col-2 p-3 custom-container-bg" style="margin-left: 15px;">
         <app-sidebar></app-sidebar>
       </div>
-      <div class="col-9 p-3 customm2-container-bg"><app-navbaragenda></app-navbaragenda></div>
+      <div class="col-9 p-3 customm2-container-bg"><app-navbaragenda></app-navbaragenda>
+    <p></p>
+
+</div>
         
       </div>
     </div>
