--- a/src/app/Components/principal/agenda/crearcontacto/crearcontacto.component.html
+++ b/src/app/Components/principal/agenda/crearcontacto/crearcontacto.component.html
@@ -74,13 +74,13 @@
 <div class="row g-2">
     <div class="col-md">
       <div class="form-floating">
-        <input type="date" class="form-control" id="floatingInputGrid" placeholder="nombre@institucion.org" formControlName="fechanacimiento">
+        <input type="date" class="form-control" id="floatingInputGrid" placeholder="nombre@institucion.org" formControlName="FechaNacimiento">
         <label for="floatingInputGrid">Fecha de Nacimiento</label>
       </div>
     </div>
     <div class="col-md">
       <div class="form-floating">
-        <input type="text" class="form-control" id="floatingInputGrid" placeholder="fnacimiento" formControlName="estadocivil">
+        <input type="text" class="form-control" id="floatingInputGrid" placeholder="fnacimiento" formControlName="EstadoCivil">
         <label for="floatingInputGrid">Estado Civil</label>
     </div>
   </div>
