--- a/src/app/Components/principal/agenda/buscarcontacto/buscarcontacto.component.html
+++ b/src/app/Components/principal/agenda/buscarcontacto/buscarcontacto.component.html
@@ -7,39 +7,61 @@
       </div>
       <div class="col-9 p-3 customm2-container-bg"><app-navbaragenda></app-navbaragenda>
     <p></p>
+    <div class="d-flex justify-content-center mb-3">
+        <!--<button class="btn btn-primary me-2" (click)="setSortBy('tipo')">Ordenar por Tipo</button>
+        <button class="btn btn-primary me-2" (click)="setSortBy('nombre')">Ordenar por Nombre</button>
+        <button class="btn btn-primary me-2" (click)="setSortBy('id')">Ordenar por #</button>-->
+      </div>
     <table class="table">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Telefono</th>
-            <th scope="col">Tipo</th>
+            <th scope="col">
+                <div style="display: flex; align-items: center;">
+                  <span style="margin-right: 5px;">#</span>
+                  <img src="../../../../../assets/img/orden-ascendente.png" (click)="setSortBy('id')" >
+                </div>
+              </th>
+            
+            <th scope="col">
+                <div style="display: flex; align-items: center;">
+                  <span style="margin-right: 5px;">   Nombre</span>
+                  <img src="../../../../../assets/img/orden-ascendente.png" (click)="setSortBy('nombre')" >
+                </div>
+              </th>
+
+
+
+              <th scope="col">
+                <div style="display: flex; align-items: center;">
+                  <span style="margin-right: 5px;">Tipo</span>
+                  <img src="../../../../../assets/img/orden-ascendente.png" (click)="setSortBy('tipo')" >
+                </div>
+              </th>
+            <th scope="col">E-mail</th>
+            <th scope="col">telefono</th>
+            <th scope="col">Carnet de Identidad</th>
+            <th scope="col">Extension</th>
+           <!-- <th scope="col">Fecha de Nacimiento</th>-->
+           <!-- <th scope="col">Estado</th>-->
             <th scope="col">Direccion</th>
           </tr>
         </thead>
         <tbody class="table-group-divider">
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-            <td>@mdo</td>
-          </tr>
-        </tbody>
-      </table>
+            <tr *ngFor="let registro of registros">
+             <th scope="row">{{ registro.id }}</th>
+              <td>{{ registro.nombre }}</td>
+              <td>{{ registro.tipo }}</td>
+              <td>{{ registro.email }}</td>
+              <td>{{ registro.telefono }}</td>
+              <td>{{ registro.ci }}</td>
+              <td>{{ registro.extension }}</td>
+              <!--<td>{{ formatDate(registro.FechaNacimiento) }}</td>-->
+              <!--<td>{{ registro.FechaNacimiento }}</td>-->
+              <!--<td>{{ registro.EstadoCivil }}</td>-->
+              <td>{{ registro.direccion }}</td>
+            </tr>
+          </tbody>
+        </table>
 
 
 </div>
