--- a/src/app/Components/principal/personal/crearpersonal/crearpersonal.component.html
+++ b/src/app/Components/principal/personal/crearpersonal/crearpersonal.component.html
@@ -76,6 +76,7 @@
             <input type="date" class="form-control" id="floatingInputGrid" placeholder="nombre@institucion.org" value="">
             <label for="floatingInputGrid">Fecha de Nacimiento</label>
           </div>
+          
         </div>
         <div class="col-md">
           <div class="form-floating">
@@ -121,6 +122,12 @@
                 <option value="OTRO">OTRO</option>
               </select>
               <label for="floatingSelectGrid">Seleccione:</label>
+      </div>
+    </div>
+    <div class="col-md">
+        <div class="form-floating">
+          <input type="date" class="form-control" id="floatingInputGrid" placeholder="nombretitulo" value="">
+          <label for="floatingInputGrid">Fecha de Incorporacion</label>
       </div>
     </div>
           <br>
